# akd-watch

./: .cspell.jsonc  .dockerignore  .gitignore  CONFIGURATION.md  Cargo.toml  README.md  config.example.toml
.claude/: CLAUDE.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  renovate.json
.github/workflows/: lint.yml  test.yml
crates/aio/: Cargo.toml
crates/aio/src/: main.rs
crates/auditor/: Cargo.toml  libservice.rlib
crates/auditor/src/: auditor_app.rs  config.rs  error.rs  lib.rs  main.rs  namespace_auditor.rs
crates/common/: Cargo.toml
crates/common/src/: akd_configurations.rs  akd_storage_factory.rs  audit_blob_name.rs  audit_request.rs  configurations.rs  crypto.rs  epoch_signature.rs  error.rs  lib.rs  namespace_info.rs  versions.rs
crates/common/src/config/: mod.rs  namespace_storage_config.rs  signature_storage_config.rs  signing_config.rs
crates/common/src/proto/: mod.rs
crates/common/src/proto/specs/: types.proto
crates/common/src/storage/: filesystem_signature_storage.rs  in_memory_queue.rs  in_memory_signature_storage.rs  in_memory_storage.rs  mod.rs  namespace_repository.rs  signing_key_repository.rs  test_akd_storage.rs  whatsapp_akd_storage.rs
crates/common/src/storage/namespaces/: file_namespace_repository.rs  in_memory_namespace_repository.rs  mod.rs
crates/common/src/storage/signatures/: filesystem_signature_storage.rs  in_memory_signature_storage.rs  mod.rs
crates/common/src/storage/signing_keys/: file_signing_key_repository.rs  in_memory_signing_key_repository.rs  mod.rs
crates/common/src/testing/: mock_namespace_repository.rs  mock_signature_storage.rs  mock_signing_key_repository.rs  mod.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: akd_configurations.rs  crypto.rs  epoch_signature.rs  lib.rs  namespace_info.rs  versions.rs  web_api.rs
crates/protocol/src/proto/: mod.rs
crates/protocol/src/proto/specs/: types.proto
crates/watcher/: Cargo.toml
crates/watcher/src/: error.rs  main.rs
crates/web/: Cargo.toml
crates/web-client/: Cargo.toml
crates/web-client/src/: client.rs  error.rs  keys.rs  lib.rs  verify.rs  wire.rs
crates/web-client/tests/: http_boundary.rs
crates/web/src/: error.rs  lib.rs  main.rs  web_config.rs
crates/web/src/routes/: audits.rs  info.rs  mod.rs  namespaces.rs
docker/: Dockerfile.aio  Dockerfile.auditor  Dockerfile.web  README.md  build.sh  config.docker.toml  docker-compose.yml
docs/: architecture.dsl  architecture.json
src/: main.rs
src/web/: mod.rs
src/web/routes/: audits.rs  namespaces.rs
