[workspace]
members = ["crates/*"]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Bitwarden Inc"]
license = "AGPL-3.0"
keywords = ["akd", "key transparency"]


[workspace.dependencies]
akd_watch_auditor = { path = "crates/auditor" }
akd_watch_watcher = { path = "crates/watcher" }
akd_watch_web = { path = "crates/web" }
akd_watch_common = { path = "crates/common" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
akd = { version = "0.11.0", features = ["whatsapp_v1", "public_auditing"] }
akd_core = { version = "0.11.0" }

[workspace.lints.clippy]
unused_async = "deny"
unwrap_used = "deny"
