[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Bitwarden Inc"]
license = "AGPL-3.0"
license-file = "LICENSE"
keywords = ["akd", "key transparency"]

[workspace.dependencies]
akd_watch_auditor = { path = "crates/auditor" }
akd_watch_watcher = { path = "crates/watcher" }
akd_watch_web = { path = "crates/web" }
akd_watch_common = { path = "crates/common" }
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
config = "0.14"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.12"
hex = "0.4.3"
tokio = { version = "1.46.1", features = ["full"] }
akd = { version = "0.11.0", features = ["whatsapp_v1", "public_auditing"] }
akd_core = { version = "0.11.0" }
serde_json = { version = "1.0.142" }
serde = { version = "1.0.219", features = ["derive"] }
ed25519-dalek = "2.2.0"

[workspace.lints.clippy]
unused_async = "deny"
unwrap_used = "deny"
