[package]
name = "akd_watch_auditor"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[lib]
name = "akd_watch_auditor"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
azure_storage = "0.17"
azure_storage_blobs = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
akd_watch_common = { workspace = true }
akd = { workspace = true }
akd_core = { workspace = true }
futures-util = "0.3.31"
anyhow = { workspace = true }
ed25519-dalek = { workspace = true }
rand = "0.9.1"

[dev-dependencies]
akd_watch_common = { workspace = true, features = ["testing"] }
