[package]
name = "akd_watch_auditor"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[lib]
name = "akd_watch_auditor"
path = "src/lib.rs"

[dependencies]
akd = { workspace = true }
akd_core = { workspace = true }
akd_watch_common = { workspace = true }
anyhow = { workspace = true }
azure_storage = "0.17"
azure_storage_blobs = "0.17"
chrono = { workspace = true }
config = { workspace = true }
ed25519-dalek = { workspace = true }
futures-util = "0.3.31"
rand = "0.9.1"
serde = { workspace = true }
thiserror = "1.0"
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
akd_watch_common = { workspace = true, features = ["testing"] }
