[package]
name = "akd_watch_auditor"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[lib]
name = "akd_watch_auditor"
path = "src/lib.rs"

[dependencies]
akd = { workspace = true }
akd_core = { workspace = true }
akd_watch_common = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
ed25519-dalek = { workspace = true }
futures-util = "=0.3.31"
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
akd_watch_common = { workspace = true, features = ["testing"] }
