[package]
name = "akd_watch_common"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
akd = {workspace = true}
hex = "0.4.3"
ed25519-dalek = "2.2.0"
chrono = "0.4.41"
uuid = "1.17.0"
rand = "0.9.1"
reqwest = "0.12.22"
