[package]
name = "akd_watch_common"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
akd = { workspace = true }
hex = "0.4.3"
ed25519-dalek = "2.2.0"
chrono = "0.4.41"
uuid = {version = "1.17.0", features = ["v4", "serde"] }
rand = "0.9.1"
reqwest = "0.12.22"
async-trait = "0.1.88"
quick-xml = "0.38.0"
tokio = { workspace = true }

[dev-dependencies]
mockito = "1.6.1"
