[package]
name = "akd_watch_protocol"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
build = "src/build.rs"

[features]
testing = []

[dependencies]
bincode = { version = "=2.0.1", features = ["serde"] }
chrono = { workspace = true }
ed25519-dalek = { workspace = true, features = ["serde"] }
hex = { workspace = true }
prost = "=0.13.5"
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { version = "=1.17.0", features = ["serde", "v4"] }

[build-dependencies]
prost-build = { version = "=0.13.5" }

[lints]
workspace = true
