[package]
name = "akd-watch-watcher"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
azure_storage = "0.17"
azure_storage_blobs = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
