[package]
name = "akd_watch_web_client"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
akd_watch_protocol = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
akd_watch_web = { workspace = true }
chrono = { workspace = true }
mockito = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
