[package]
name = "akd_watch_web"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
akd = { workspace = true }
akd_watch_common = { workspace = true }
anyhow = { workspace = true }
axum = { version = "=0.7.9", features = ["macros"] }
config = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
